# skill-boost-exposing-apis

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/skills/checkup-api/: SKILL.md
.claude/skills/checkup-api-sparse/: SKILL.md
.devcontainer/: devcontainer.json
data/: seed.sql
exercises/01_design/: README.md
exercises/01_design/solution/: v2.py
exercises/02_orm/: README.md
exercises/02_orm/solution/: models.py  v2.py
exercises/03_openapi/: README.md
exercises/03_openapi/solution/: main.py  schemas.py  v2.py
exercises/04_auth/: README.md
exercises/04_auth/solution/: auth.py  v2.py
exercises/05_agent/: README.md  openapi_sparse.json  prompts.md
keycloak/: realm-export.json
scripts/: apply_solutions.py  export_sparse_spec.py
src/_skeleton/: models.py  schemas.py
src/_skeleton/routers/: v2.py
src/checkup_api/: __init__.py  auth.py  database.py  main.py
src/checkup_api/routers/: v1.py
tests/: conftest.py  test_01_design.py  test_02_orm.py  test_03_openapi.py  test_04_auth.py
